--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
+    "react-modal": "^3.16.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@types/react-modal": "^3.16.0"
   }
 }
