--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@firebase/auth": "^1.0.0",
     "@firebase/firestore": "^4.0.0",
+    "@firebase/storage": "^0.11.2",
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
@@ -25,9 +26,11 @@
     "react-firebase-hooks": "^5.1.1",
     "react-modal": "^3.16.1",
     "tailwindcss": "3.3.2",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@types/react-modal": "^3.16.0"
+    "@types/react-modal": "^3.16.0",
+    "@types/uuid": "^9.0.2"
   }
 }
